# dbt_tripadvisor

./: .gitignore  .pre-commit-config.yaml  .sqlfluff  .user.yml  Makefile  dbt_project.yml  profiles.template.yml  pyproject.toml  requirements.txt
macros/: get_date_range.sql  hash_one_col.sql  hash_two_cols.sql  remove_vietnamese_accents.sql
models/marts/: dim_cuisine.sql  dim_date.sql  dim_location.sql  dim_review.sql  dim_user.sql  fact_restaurant_feedback.sql
models/staging/: _tripadvisor__sources.yml  stg_tripadvisor__location.sql  stg_tripadvisor__queries.py  stg_tripadvisor__review.sql
models/staging/base/: base_tripadvisor__geolocation.sql  base_tripadvisor__queries.sql
seeds/: seed_tripadvisor__queries.csv  source_tripadvisor__geolocation.csv
