[project]
name = "dbt-tripadvisor"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "dbt-adapters==1.10.3",
    "dbt-bigquery==1.8.3",
    "dbt-common==1.13.0",
    "dbt-core==1.8.9",
    "dbt-extractor==0.5.1",
    "dbt-semantic-interfaces==0.5.1",
    "sqlfluff==3.2.5",
    "sqlfluff-templater-dbt==3.2.5",
]
